objects/revcult__Connection__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>revcult__Connection_Group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Connection Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>revcult__Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Connection</label>
</CustomObject>